--- a/index.css
+++ b/index.css
@@ -31,7 +31,16 @@ footer{
 .hero-text{
     font-size: 2em;
     text-align: end;
+    animation: fadeIn 4s linear forwards;
 }
+@keyframes fadeIn {
+    from {
+      opacity: 0;
+    }
+    to {
+      opacity: 1;
+    }
+  }
 .container{
     display: flex;
     flex-direction: column;
