--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@
     font-weight: 400;
 }
 body{
-    background-color: #141b51;
+    background-color: #ffffff;
 }
 p{
     font-size: 20px;
@@ -19,20 +19,23 @@ footer{
 }
 .hero{
     height: 300px;
-    /* background-color: #01303f; */
+    width: 70%;
+    background-color: #5f0bb8;
     padding: 20px;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    margin: 0 auto;
     align-items: center;
     color:aliceblue;
-    border-radius: 0, 0, 0, 50;
-    box-shadow: 3px 0px 5px #01303f;
+    font-family: bebas neveu;
+    border-radius: 30px;
+    box-shadow: 3px 5px 5px #5f0bb8;
     position:relative;
 }
 .hero-title{
     font-size: 15px;
-    color: #128a5f;
+    color: white;
 }
 .hero-text{
     font-size: 2em;
@@ -87,12 +90,14 @@ footer{
     margin: 20px;
     padding: 10px;
     justify-content: center;
-    color: white;
+    color: black;
     text-align: center;
     
 }
 .container p{
-    width: 80%;;
+    width: 80%;
+    text-align: justify;
+    font-size: 20px;
 }
 .container-flex{
     display: flex;
@@ -123,7 +128,7 @@ footer{
     width: 200px;
 }
 .project h3{
-    color: #01303f;
+    color: #fffffe;
     font-size: 25px;
 }
 .butonLink{
